<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AuthActivity">


    <EditText
        android:id="@+id/Nom"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:drawableLeft="@drawable/avatar"
        android:ems="20"
        android:hint="@string/firstname"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Prenom"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:drawableLeft="@drawable/avatar"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="42dp"

        android:layout_marginBottom="25dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/pass"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:drawableLeft="@drawable/padlock"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/hide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Confirm"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:drawableLeft="@drawable/padlock"
            android:ems="10"
            android:hint="@string/confirm"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/hide" />
    </LinearLayout>

    <Button
        android:id="@+id/regbtn"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="40sp"
        android:background="@drawable/shape"

        android:fontFamily="@font/basic"
        android:text="@string/registre"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>